--- a/index.html
+++ b/index.html
@@ -42,29 +42,29 @@
         <section id="section1">
             <aside>
                 <h2>LA TOUR DE PISE</h2>
-                <a href="tourdepise.html"><img src="images/Images/tour.jpeg" alt=""></a>
+                <a href="tourdepise.html"><img src="tour.jpeg" alt=""></a>
             </aside>
 
             <aside>
                 <h2>LES STATUES DE L'ILE DE PAQUES</h2>
-                <a href="LesStatuesdel'iledePaques.html"><img src="images/images/statue.jpg" alt=""></a>
+                <a href="LesStatuesdel'iledePaques.html"><img src="statue.jpg" alt=""></a>
             </aside>
 
             <aside>
                 <h2>LE TAJ MAHAL</h2>
-                <a href="LeTajMahal.html"><img src="images/images/taj.gif" alt=""></a>
+                <a href="LeTajMahal.html"><img src="taj.gif" alt=""></a>
             </aside>
         </section><br>
 
         <section id="section2">
             <aside>
                 <h2>L'ACROPOLE D'ATHENES</h2>
-                <a href="acropole.html"><img src="images/Images/acropole.gif" alt=""></a>
+                <a href="acropole.html"><img src="acropole.gif" alt=""></a>
             </aside>
 
             <aside>
                 <h2>LE BURJ KHALIFA</h2>
-                <a href="LeBurjKhalifa.html"><img src="images/Images/burj.gif" alt=""></a>
+                <a href="LeBurjKhalifa.html"><img src="burj.gif" alt=""></a>
             </aside>
 
             <aside class="contact">
