--- a/tourdepise.html
+++ b/tourdepise.html
@@ -52,7 +52,7 @@
         <section id="section4">
             <div>
                 <div class="tour1">
-                    <img src="images/tour1.jpg">
+                    <img src="tour1.jpg">
                 </div>
 
                 <p>
@@ -66,7 +66,7 @@
         <section id="section5">    
             <div>
                 <div class="tour2">
-                    <img src="images/tour2.jpg">
+                    <img src="tour2.jpg">
                 </div>
 
                 <p>
