--- a/LeBurjKhalifa.html
+++ b/LeBurjKhalifa.html
@@ -54,7 +54,7 @@
             <section id="section18">
                 <div>
                     <div class="burj1">
-                        <img src="Images/burj1.jpg">
+                        <img src="burj1.jpg">
                     </div>
 
                     <p>
@@ -76,7 +76,7 @@
             <section id="section19">
                 <div>
                     <div class="burj2">
-                        <img src="Images/burj2.jpg">
+                        <img src="burj2.jpg">
                     </div>
 
                     <p>
@@ -100,7 +100,7 @@
             <section id="section20">
                 <div>
                     <div class="burj3">
-                        <img src="Images/burj3.jpg">
+                        <img src="burj3.jpg">
                     </div>
 
                     <p>
