--- a/LeTajMahal.html
+++ b/LeTajMahal.html
@@ -53,7 +53,7 @@
             <section id="section11">
                 <div>
                     <div class="taj1">
-                        <img src="Images/taj1.jpg">
+                        <img src="taj1.jpg">
                     </div>
                     
                     <p>
@@ -73,7 +73,7 @@
             <section id="section12">
                 <div>
                     <div class="taj2">
-                        <img src="Images/taj2.jpg">
+                        <img src="taj2.jpg">
                     </div>
 
                     <p>
@@ -94,7 +94,7 @@
             <section id="section13">
                 <div>
                     <div class="taj3">
-                        <img src="Images/taj3.jpg">
+                        <img src="taj3.jpg">
                     </div>
 
                     <p>
