--- a/acropole.html
+++ b/acropole.html
@@ -50,7 +50,7 @@
         <section id="section15">
             <div>
                 <div class="acropole1">
-                    <img src="Images/acropole1.jpg">
+                    <img src="acropole1.jpg">
                 </div>
                
                 <p>
@@ -64,7 +64,7 @@
         <section id="section16">
             <div>
                 <div class="acropole2">
-                    <img src="Images/acropole2.jpg">
+                    <img src="acropole2.jpg">
                 </div>
     
                 <p>
